@@ -10,18 +10,12 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 
 scenarios(simulator => 1);
 
-unlink("$Self->{obj_dir}/t_sys_file_basic_test.log");
-
 compile(
-    # Build without cached objects, see bug363
-    make_flags => 'VM_PARALLEL_BUILDS=0',
     );
 
 execute(
     check_finished => 1,
     );
-
-files_identical("$Self->{obj_dir}/t_sys_file_basic_test.log", $Self->{golden_filename});
 
 ok(1);
 1;
